--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
     <div class="form-modal-content">
       <span class="close" onclick="closeRegisterForm()">&times;</span>
       <h3>Register Now</h3>
-      <form method="POST" action="register.php">
+      <form method="POST" action="https://your-backend-url.com/register.php">
         <input type="text" name="full_name" placeholder="Full Name" required><br>
         <input type="email" name="email" placeholder="Email" required><br>
         <input type="text" name="phone" placeholder="Phone Number" required><br>
