--- a/index.html
+++ b/index.html
@@ -244,64 +244,126 @@
     }
     
     /* Modal Styles */
-.form-modal {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  justify-content: center;
-  align-items: center;
-}
+    .form-modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+    }
 
-.form-modal.show {
-  display: flex;
-}
+    .form-modal.show {
+      display: flex;
+    }
 
-.form-modal-content {
-  background-color: white;
-  padding: 30px;
-  border-radius: 10px;
-  width: 300px;
-  text-align: center;
-  position: relative; /* Added relative positioning */
-}
+    .form-modal-content {
+      background-color: white;
+      padding: 30px;
+      border-radius: 10px;
+      width: 300px;
+      text-align: center;
+      position: relative;
+    }
 
-.form-modal-content input,
-.form-modal-content select {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-}
+    .form-modal-content input,
+    .form-modal-content select {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
 
-.form-modal-content button {
-  background-color: #457b9d;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
+    .form-modal-content button {
+      background-color: #457b9d;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
 
-.form-modal-content button:hover {
-  background-color: #a8dadc;
-}
+    .form-modal-content button:hover {
+      background-color: #a8dadc;
+    }
 
-.close {
-  position: absolute; /* Change to absolute */
-  top: 10px;
-  right: 10px;
-  font-size: 30px;
-  color: #333;
-  cursor: pointer;
-}
+    .close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 30px;
+      color: #333;
+      cursor: pointer;
+    }
 
+    /* Media Queries for Responsiveness */
+    @media (max-width: 768px) {
+      .header {
+        flex-direction: column;
+        text-align: center;
+      }
 
-    
+      .header nav ul {
+        flex-direction: column;
+        gap: 15px;
+        margin-top: 20px;
+      }
+
+      .hero h1 {
+        font-size: 2.5rem;
+      }
+
+      .hero p {
+        font-size: 1rem;
+      }
+
+      .courses h2 {
+        font-size: 2rem;
+      }
+
+      .course-grid {
+        grid-template-columns: 1fr 1fr;
+      }
+
+      .course img {
+        height: 150px;
+      }
+
+      .course h3 {
+        font-size: 1.3rem;
+      }
+
+      .contact-info h2 {
+        font-size: 2rem;
+      }
+
+      .contact-info p {
+        font-size: 0.9rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .hero h1 {
+        font-size: 2rem;
+      }
+
+      .hero p {
+        font-size: 1rem;
+      }
+
+      .course-grid {
+        grid-template-columns: 1fr;
+      }
+
+      .footer {
+        font-size: 0.8rem;
+      }
+    }
+
   </style>
 </head>
 
@@ -341,7 +403,6 @@
     <div class="course-grid">
       <div class="course">
         <img src="https://img.freepik.com/free-photo/ai-nuclear-energy-industry-innovation-smart-grid-disruptive-technology_53876-143121.jpg" alt="Class 11">
-
         <h3>Class 11</h3>
         <p>Comprehensive coaching for Class 11 students to build a strong foundation for future success.</p>
       </div>
@@ -356,7 +417,7 @@
         <p>Intensive coaching for IIT JEE aspirants to ace the entrance exam with expert guidance.</p>
       </div>
       <div class="course">
-       <img src="https://images.shiksha.com/mediadata/images/articles/1625230340phpfj01TQ.jpeg" alt="Neet">
+        <img src="https://images.shiksha.com/mediadata/images/articles/1625230340phpfj01TQ.jpeg" alt="Neet">
         <h3>NEET</h3>
         <p>Get ready for NEET with specialized coaching for medical aspirants.</p>
       </div>
@@ -377,7 +438,7 @@
       <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
       <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
       <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://linkedin.com"  target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
   </footer>
 
@@ -403,7 +464,6 @@
   </div>
 
   <script>
-    // Show and Hide Modal
     function showRegisterForm() {
       document.getElementById("registerModal").classList.add("show");
     }
@@ -414,4 +474,4 @@
   </script>
 </body>
 
-</html> 
+</html>
